--- a/.editorconfig
+++ b/.editorconfig
@@ -1,5 +1,8 @@
-[*.{js,jsx,ts,tsx,vue}]
+root = true
+
+[*]
 indent_style = space
-indent_size = 2
+indent_size = 4
+charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
